react/src/styles/App.module.scss
/* ... */
.caption {
    font-size: $font-size-smaller;
    line-height: $line-height-smaller;
    color: $color-text-placeholder;
}


.main-date {
    font-size: 18px;
    line-height: 19px;
    margin: 4px 0 10px 0;
    text-align: center;
    color: rgba($color-highlight, 0.3);
}


.visitor,
.academic-schedule {
    & > div:nth-child(1) {
        font-size: 20px;
        line-height: 20px;
        margin-bottom: 6px;
        text-align: center;
    }

    & > div:nth-child(2) {
        margin-bottom: 10px;
        text-align: center;


        strong {
            margin-right: 8px;
        }
    }
}


.related-courses {
    display: flex;
    flex-direction: row;

    & > div:nth-child(1),
    & > div:nth-child(3),
    & > div:nth-child(5) {
        flex: 1 1 auto;
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    & > div:nth-child(2),
    & > div:nth-child(4) {
        flex: 0 0 auto;
        margin: auto 10px;
    }
}


.history {
    overflow: scroll;
    margin-right: -$section-padding;
    padding-right: $section-padding;

    & > table {
        table-layout: auto;
        margin-right: -10000px;

        & > tbody > tr {
            &:first-child {
                vertical-align: bottom;
            }
            &:nth-child(2) {
                font-weight: bold;
                font-size: $font-size-smaller;
                line-height: $line-height-smaller;
            }
            &:last-child {
                vertical-align: top;
            }

            & > th {
                position: sticky;
                left: 0;
                background-color: $color-section-background;
                width: 10px;
                white-space: nowrap;
                padding-right: 10px;
                font-size: $font-size-small;
                vertical-align: middle;
                text-align: right;
                line-height: $line-height-small;
                color: $color-text-normal;
                font-weight: initial;;
            }

            & > td {
                text-align: center;
                padding: 0 6px;
                width: calc(64px + 7vh + (6px * 2));
                border-left: 1px solid $color-normal-line;
                &:first-of-type {
                    padding-left: 0;
                    width: calc(64px + 7vh + 6px);
                    border-left: none;
                }
                &.history__cell--year-label {
                    padding-top: 6px;
                    padding-bottom: 6px;
                }
                &.history__cell--unopen {
                    vertical-align: middle;
                    color: $color-text-placeholder;
                    padding-top: 8px;
                    padding-bottom: 8px;
                }
            }
        }
    }
}


.attribute {
        display: flex;
        flex-direction: row;
        margin-bottom: 8px;

        .block--course & {
            margin-bottom: 6px;
        }

        &:last-child {
            margin-bottom: 0;
        }

        &--semi-long {
            & > * {
                line-height: $line-height-normal + 1px * 2;
                margin-top: -1px;
                margin-bottom: -1px;
            }
        }

        & > *:first-child {
            font-weight: bold;
            margin-right: 6px;
            flex: none;

            &.fixed-ko {
                width: 23px;
            }
            &.fixed-en {
                width: 32px;
            }
        }

        & > *:last-child {
            flex: initial;

            &.search-fields {
                margin-bottom: -6px;
                margin-right: -6px;

                & > label {
                    display: inline-block;
                    margin-bottom: 6px;
                    margin-right: 6px;
                    white-space: nowrap;

                    & > i {
                        margin-left: 3px;
                    }
                }
            }
        }

        .section-content--summary__type & {
            overflow: hidden;
            &:last-child {
                margin-bottom: 0px;
            }
            @media (orientation: portrait) {
                margin-bottom: 0px;
                flex: 1 1 40px;
            }

            & > span:first-child {
                &.fixed-ko {
                    white-space: nowrap;
                    width: 23px;
                }
                &.fixed-en {
                    white-space: nowrap;
                    width: 23px;
                }
            }

            & > div > span {
                margin-right: 4px;

                &.active {
                    color:$color-highlight;
                }
            }
        }
}
/* ... */

